--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-beautifulsoup4==4.12.2
-CairoSVG==2.7.1
-PyPDF2==3.0.1
-python-slugify==8.0.1
-Requests==2.31.0
+beautifulsoup4
+CairoSVG
+PyPDF2
+python-slugify
+Requests
+tqdm
